[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pie_toolbox"
version = "0.1.0"
description = "PIE Toolbox is a Python package designed for processing, analyzing, and classifying voxel data."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{ name = "PIE Toolbox Contributors" }]
keywords = ["neuroimaging", "ssm-pca", "svm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["pie_toolbox*"]
